[FIX][workspace] #22936 : Fix icon shared on IE11 + optimization"

--- a/css/modules/_navigations.scss
+++ b/css/modules/_navigations.scss
@@ -219,8 +219,13 @@ nav.vertical,
                     text-indent: 8px;
                 }
                 i.shared {
-                    position: unset;
                     opacity: 1;
+                    position: inherit;
+                    right: 0;
+                    bottom: 0;
+                    width: 18px;
+                    height: 18px;
+                    margin: 0 5px 0 0;
                 }
 
             }
